# PropChain-contract

./: Cargo.toml  Dockerfile.test-node  README.md  docker-compose.test.yml  lib.rs
.github/workflows/: rustdoc.yml
contracts/analytics/src/: lib.rs
contracts/bridge/src/: errors.rs  lib.rs  tests.rs  validator_staking.rs
contracts/compliance_registry/: lib.rs
contracts/crowdfunding/src/: lib.rs
contracts/escrow/src/: lib.rs  types.rs
contracts/factory/examples/: deploy_property_token.rs
contracts/fractional/src/: lib.rs
contracts/gdpr/: Cargo.toml  lib.rs
contracts/governance/src/: lib.rs  types.rs
contracts/identity/: lib.rs
contracts/insurance/src/: errors.rs  fraud_detection.rs  lib.rs  premium_engine.rs  premium_tests.rs  types.rs
contracts/lending/src/: lib.rs
contracts/lib/src/: lib.rs
contracts/oracle/src/: lib.rs  tests.rs  types.rs
contracts/property-token/src/: lib.rs  tests.rs
contracts/sanctions/: Cargo.toml  lib.rs
contracts/staking/src/: lib.rs  tests.rs  types.rs
contracts/tax-compliance/src/: jurisdiction_presets.rs  lib.rs  tax_engine.rs  tax_strategies.rs
contracts/traits/src/: bridge.rs  errors.rs
contracts/version-registry/: Cargo.toml
contracts/version-registry/src/: lib.rs
docs/: index.html  lending-risk-parameters.md  onboarding-checklist.md
docs/tutorials/: cross-chain-bridging.md
indexer/: Cargo.toml
indexer/src/: main.rs  poller.rs  ws.rs
scripts/: start-test-env.sh
