[package]
name = "propchain-sanctions"
version = "0.1.0"
edition = "2021"
description = "On-chain sanctions screening for property transactions"

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
propchain-traits = { path = "../traits", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
]
ink-as-dependency = []
