[package]
name = "version-registry"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "On-chain contract version registry for upgrade tracking"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
publish = false

[dependencies]
ink = { workspace = true, default-features = false }
scale = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
propchain-traits = { path = "../traits", default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-traits/std",
]
ink-as-dependency = []
e2e-tests = []
